# genlearn

./: .gitignore  pyproject.toml
mnist_vae/: mnist_beta_vae.ipynb  mnist_utils.py  utils.py
notebooks/: cifar10_vq_vae.ipynb  einsum.ipynb  mnist_beta_vae.ipynb  transformer.ipynb
src/genlearn/: __init__.py  data.py  mnist_utils.py  utils.py
src/genlearn/data_utils/: __init__.py  shakespeare.py
src/genlearn/models/: transformer.py  vae.py
