[project]
name = "genlearn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "distrax>=0.1.7",
    "einops>=0.8.1",
    "flax>=0.12.0",
    "grain>=0.2.14",
    "ipykernel>=6.29.5",
    "jax>=0.6.1",
    "matplotlib>=3.10.3",
    "optax>=0.2.4",
    "orbax-checkpoint>=0.11.26",
    "pillow>=11.2.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
]
